--- a/Heroes/src/app/components/create-hero/create-hero.component.html
+++ b/Heroes/src/app/components/create-hero/create-hero.component.html
@@ -64,6 +64,7 @@
         ></dx-text-box>
       </div>
     </div>
+    <span [textContent]="errorMessage"></span>
       <div class="button-container">
           <dx-button [text]="submitButtonText"
                      (onClick)="submit()"
