changed css style name

--- a/Heroes/src/entities/app/components/filters/filters.component.html
+++ b/Heroes/src/entities/app/components/filters/filters.component.html
@@ -4,11 +4,11 @@
     <span>Уровень героя:</span>
     <span>от</span>
     <dx-text-box formControlName="levelFloor"
-                 class="text-box--size-s"
+                 class="filter-form__input input--size-s"
     ></dx-text-box>
     <span>до</span>
     <dx-text-box formControlName="levelCeil"
-                 class="text-box--size-s"
+                 class="input--size-s"
     ></dx-text-box>
   </div>
    <div class="filter-form__sort-item sort-item__abilities">
