--- a/Heroes/src/app/entities/components/output-hero/output-hero.component.scss
+++ b/Heroes/src/app/entities/components/output-hero/output-hero.component.scss
@@ -11,8 +11,9 @@
   padding: 0 30px;
 }
 .ability-item {
-    background-color: cadetblue;
-    border-radius: 3px;
-    margin-right: 5px;
-    padding: 3px;
+  display: inline-block;
+  background-color: cadetblue;
+  border-radius: 3px;
+  margin-right: 5px;
+  padding: 3px;
 }
