--- a/Heroes/src/app/app.component.scss
+++ b/Heroes/src/app/app.component.scss
@@ -1,15 +1,15 @@
-.skeleton {
+:host {
   display: flex;
   flex-direction: column;
   width: 100vw;
   height: 100vh;
   flex-wrap: wrap;
 }
-.column-a {
+.left-column {
   width: 40%;
   height: 100%;
 }
-.column-b {
+.right-column {
   width: 60%;
 }
 
