--- a/Heroes/src/app/entities/components/filters/filters.component.html
+++ b/Heroes/src/app/entities/components/filters/filters.component.html
@@ -1,34 +1,46 @@
 <form [formGroup]="form"
       class="filter-form">
   <div class="filter-form__sort-item">
-    <span>Уровень героя:</span>
-    <span>от</span>
-    <dx-text-box formControlName="levelFloor"
+    <div>
+      Уровень героя:
+    </div>
+    <div>
+      от
+    </div>
+    <dx-text-box [formControl]="bottomLevelFormControl"
                  class="filter-form__input input--size-s"
     ></dx-text-box>
-    <span>до</span>
-    <dx-text-box formControlName="levelCeil"
+    <div>
+      до
+    </div>
+    <dx-text-box [formControl]="topLevelFormControl"
                  class="input--size-s"
     ></dx-text-box>
   </div>
    <div class="filter-form__sort-item sort-item__abilities">
-     <span>Способности:</span>
+     <div>
+       Способности:
+     </div>
      <dx-tag-box [dataSource]="possibleAbilities"
-                 displayExpr="name"
-                 valueExpr="id"
+                 [formControl]="abilitiesFormControl"
                  [hideSelectedItems]="true"
                  [width]="'95%'"
-                 formControlName="abilities"
+                 displayExpr="name"
+                 valueExpr="id"
                  placeholder=""
      ></dx-tag-box>
    </div>
   <div class="filter-form__sort-item">
-    <span>Поиск по имени:</span>
-    <dx-text-box formControlName="searchText"
+    <div>
+      Поиск по имени:
+    </div>
+    <dx-text-box [formControl]="heroNameFormControl"
     ></dx-text-box>
   </div>
   <div class="filter-form__sort-item">
-    <span>Сортировать по {{ sortName }} уровня:</span>
+    <div>
+      Сортировать по {{ sortName }} уровня:
+    </div>
       <dx-button [icon]="iconName"
                  (click)="switchSort()"
       ></dx-button>
